--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=edusupply
+
+
+jwt.secret=${JWT_SECRET:22389bb4-3784-4fa3-ab3f-c93c5ca38c05}
+jwt.secret.file=${JWT_SECRET_FILE:}
+jwt.expiration=${JWT_EXPIRATION_MS:3600000}
+jwt.refresh.expiration=${REFRESH_JWT_EXPIRATION_MS:2592000000}
+
+
+cors.allowed-origins=${ALLOWED_ORIGINS:http://localhost:4200}
+cors.allowed-credentials=${ALLOWED_CREDENTIALS:false}
